--- a/Air Quality/View/Base.lproj/Main.storyboard
+++ b/Air Quality/View/Base.lproj/Main.storyboard
@@ -24,6 +24,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="428" height="43.666667938232422"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="Ilm-0a-BkQ" kind="show" identifier="goToState" id="TEv-KL-h0n"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -32,9 +35,6 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="TNV-0Q-Q6c"/>
-                    <connections>
-                        <segue destination="Ilm-0a-BkQ" kind="show" identifier="goToState" id="gi9-1g-4Sm"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rhr-hJ-bsy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -56,6 +56,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="428" height="43.666667938232422"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="Gv6-xy-ESd" kind="show" identifier="goToCityInfo" id="vjq-v5-CWD"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -64,9 +67,6 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="UxO-8p-B7L"/>
-                    <connections>
-                        <segue destination="Gv6-xy-ESd" kind="show" identifier="goToDetail" id="t8J-WP-IAn"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nSt-tv-s3a" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -97,13 +97,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="LJF-eK-HiA">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="stateCell" id="LJF-eK-HiA">
                                 <rect key="frame" x="0.0" y="44.666666030883789" width="428" height="43.666667938232422"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="LJF-eK-HiA" id="n2g-5k-sBG">
                                     <rect key="frame" x="0.0" y="0.0" width="428" height="43.666667938232422"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="qtY-Aa-aP9" kind="show" identifier="goToCity" id="BI6-ft-jYb"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -112,9 +115,6 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="pI7-gD-s4g"/>
-                    <connections>
-                        <segue destination="qtY-Aa-aP9" kind="show" identifier="goToCity" id="ZdI-es-DVY"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1pR-xJ-tl9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
